<resources>
    <string name="app_name">RUCafe</string>
    <string name="title_activity_store_orders">store_orders</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="yeast_donut">Yeast Donut</string>

    <string name="shortCoffee">Short</string>
    <string name="tallCoffee">Tall</string>
    <string name="grandeCoffee">Grande</string>
    <string name="ventiCoffee">Venti</string>
    <string name="creamCoffee">Cream</string>
    <string name="syrupCoffee">Syrup</string>
    <string name="caramelCoffee">Caramel</string>
    <string name="whippedCreamCoffee">Whipped Cream</string>
    <string name="milkCoffee">Milk</string>


    <string-array name="coffeeSizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string-array name="buttonListSet">
        <item>Order Donut</item>
        <item>Order Coffee</item>
        <item>Current Order</item>
        <item>All Orders</item>
    </string-array>

    <string name="EmptyBasket">Please select some items to order.</string>


    <string name="Add">Add</string>
    <string name="SubTotal">SubTotal:</string>
    <string name="SalesTax">Sales Tax:</string>
    <string name="Total">Total:</string>

    <string name="CurrentOrder">Current Order</string>
    <string name="StoreOrders">Store Orders</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="sub_total">Sub Total:</string>
    <string name="picture_of_donut">picture of donut</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="spinner_for_donut_order_quantity">spinner for donut order quantity</string>
    <string name="trashcan_image">trashcan image</string>
    <string name="trash_can_image">trash can image</string>
    <string name="image_of_particular_donut">image of particular donut</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="current_order_picture">current order picture</string>
    <string name="all_orders">All Orders</string>
    <string name="order_donut">Order Donut</string>
    <string name="current_order">Current Order</string>
    <string name="all_order_picture">all order picture</string>
    <string name="donut_order_picture">donut order picture</string>
    <string name="order_coffee_picture">order coffee picture</string>
    <string name="about">About</string>
    <string name="about_the_program">About the program</string>
    <string name="add">Add</string>
    <string name="coffee_bean_image">coffee bean image</string>
    <string name="coffee_bean_image_but_flipped">coffee bean image but flipped</string>
    <string name="placeholdertext">placeholdertext</string>
    <string name="generic_donut_image">generic donut image</string>

    <string-array name="donut_names">
        <item>Double Chocolate</item>
        <item>Jelly Filled</item>
        <item>Oreo</item>
        <item>French</item>
        <item>Red Velvet</item>
        <item>Powdered Sugar</item>
        <item>Baked Jelly</item>
        <item>Boston Cream</item>
        <item>Chocolate</item>
        <item>Strawberry</item>
        <item>Cinnamon</item>
        <item>Coconut</item>
    </string-array>

    <string-array name="donut_types">
        <item>Yeast Donut</item>
        <item>Yeast Donut</item>
        <item>Yeast Donut</item>
        <item>Yeast Donut</item>
        <item>Cake Donut</item>
        <item>Cake Donut</item>
        <item>Cake Donut</item>
        <item>Cake Donut</item>
        <item>Donut Hole</item>
        <item>Donut Hole</item>
        <item>Donut Hole</item>
        <item>Donut Hole</item>
    </string-array>
</resources>