<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coffee_order">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemListView"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="130dp"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/salesTaxDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SalesTax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SalesTax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/subTotalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubTotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/subTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubTotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/totalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemListView"
        app:layout_constraintVertical_bias="0.498" />


    <TextView
        android:id="@+id/currentOrder"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="145dp"
        android:text="@string/CurrentOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="64dp"
        android:text="@string/PlaceOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>